--- a/core/Piranha.Manager/assets/less/tables.less
+++ b/core/Piranha.Manager/assets/less/tables.less
@@ -225,25 +225,6 @@
 	}
 }
 
-/*
-.panel .table {
-	>tbody {
-		>tr {
-			>td {
-				padding: 10px;
-				border-top: 1px solid @bg-color;				
-			}
-
-			&:nth-child(2n+1) {
-				>td {
-					background-color: @bg-color;
-				}
-			}
-		}
-	}
-}
-*/
-
 ol.sitemap {
     padding-left: 0;
 
@@ -259,7 +240,7 @@ ol.sitemap {
 		}
 
 		&.three {
-			width: 122px;
+			width: 105px;
 		}
 	}
 
@@ -413,6 +394,7 @@ li.sitemap-item {
 			&.add-after, &.add-below {
 				font-size: 16px;
 				line-height: 14px;
+				padding-top: 12px;
 			}
         }
 
